force-app/main/default/objects/Campaign_ASA_Attendees__c/Campaign_ASA_Attendees__c.object-meta.xml
<CustomObject>
    <label>Attendee Feedback</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>