force-app/main/default/objects/Campaign_ASA_Attendees__c/fields/ASA_Attendee__c.field-meta.xml
<CustomField>
    <fullName>ASA_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASA Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Email_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>