force-app/main/default/objects/Campaign_ASA_Attendees__c/fields/Recommendation_for_Next_Year_s_Show__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_for_Next_Year_s_Show__c</fullName>
    <label>Recommendation for Next Year&#39;s Show</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Attend</fullName>
            </value>
            <value>
                <fullName>Present &amp; Attend</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Go</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>