force-app/main/default/objects/Campaign_ASA_Attendees__c/fields/Total_Cost_of_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Attendance__c</fullName>
    <inlineHelpText>This includes airfare, hotel, meals, transportation.</inlineHelpText>
    <label>Total Cost of Attendance?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>