force-app/main/default/objects/Campaign_ASA_Attendees__c/fields/Why_did_they_attend__c.field-meta.xml
<CustomField>
    <fullName>Why_did_they_attend__c</fullName>
    <label>Reason for Attending</label>
    <type>TextArea</type>
</CustomField>